Fix TRGB comparison logging; refresh manuscript/site outputs

--- a/site/index.html
+++ b/site/index.html
@@ -89,7 +89,7 @@
       "datePublished": "2026-01-12",
       "image": "https://mlsmawfield.com/tep/h0/public/image.jpg",
       "url": "https://mlsmawfield.com/tep/h0/",
-      "sameAs": "https://doi.org/10.5281/zenodo.18209702",
+      "sameAs": "https://doi.org/10.5281/zenodo.18216583",
       "publisher": {
         "@type": "Organization",
         "name": "Independent Research",
@@ -124,7 +124,7 @@
     <meta name="citation_author" content="Smawfield, Matthew Lukin">
     <meta name="citation_publication_date" content="2026/01/12">
     <meta name="citation_pdf_url" content="https://matthewsmawfield.github.io/TEP-H0/public/docs/Smawfield_2026_TEP-H0_v0.3_KingstonUponHull.pdf">
-    <meta name="citation_doi" content="10.5281/zenodo.18209702">
+    <meta name="citation_doi" content="10.5281/zenodo.18216583">
     <meta name="citation_keywords" content="Hubble Tension; Cepheids; Cosmology; TEP; Modified Gravity; Screening">
 
     <!-- Twitter -->
@@ -814,7 +814,7 @@
         <div class="author">Matthew Lukin Smawfield</div>
         <div class="version">Version: v0.3 (Kingston upon Hull)</div>
         <div class="date">First published: 11 January 2026 | Updated: 12 January 2026</div>
-        <div class="doi">DOI: <a href="https://doi.org/10.5281/zenodo.18209702" target="_blank">10.5281/zenodo.18209702</a></div>
+        <div class="series"><span>TEP-H0</span><span class="doi"><a href="https://doi.org/10.5281/zenodo.18216583" target="_blank" rel="noopener noreferrer" onclick="event.stopPropagation();" itemprop="sameAs">10.5281/zenodo.18216583</a></span></div>
         <div class="doi">Code Availability: <a href="https://github.com/matthewsmawfield/TEP-H0" target="_blank">github.com/matthewsmawfield/TEP-H0</a></div>
     </header>
 
